<resources>
    <string name="app_name">Aid-Android-Temi</string>

    <string name="main">메인</string>
    <string name="menuCheck">메뉴확인</string>
    <string name="use">사용중</string>
    <string name="empty">빈자리</string>
    <string name="number">0번</string>
    <string name="next">이동하기</string>
    <string name="arrival">도착 완료!</string>
    <string name="food">음식을 받으신 후에 이동하기 버튼을 눌러주세요!</string>
    <string name="go_homebase">홈베이스로 이동중 잠시 비켜주세요!</string>
    <string name="table_number">%1$s번</string>
    <string name="go_table">%1$s번 자리로 이동중 잠시 비켜주세요!</string>
    <string name="dot">.</string>
</resources>